--- a/ZipR/Podfile
+++ b/ZipR/Podfile
@@ -11,6 +11,6 @@ pod 'Firebase/Auth'
 pod 'Firebase/Core'
 pod 'Firebase/Database'
 pod 'GoogleSignIn'
-pod 'PTCardTabBar'
 pod 'TagListView'
+pod 'SOTabBar'
 end
